--- a/popup.html
+++ b/popup.html
@@ -37,9 +37,10 @@
   <input type="checkbox" id="espelho" name="espelho" value=1>
   <label for="espelho"> Sendo o jogo selecionado para a Lotomania, ative caso queira marcar o espelho nas apostas.</label><br>  
   <br>
-<script src="popup.js"></script>
+  <button id="mybutton">Preencher jogos</button>
 	<br>
 	<br>
 	<textarea id="listadejogos" rows="25" cols="180"></textarea>
+  <script src="popup.js"></script>
   </body>
 </html>
